Many changes ported across, now handles lens distortion

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -203,18 +203,13 @@ RUN  install-from-source https://github.com/fmtlib/fmt/archive/6.0.0.tar.gz \
 RUN install-header-from-source https://github.com/catchorg/Catch2/releases/download/v2.10.1/catch.hpp
 
 # Aravis
-RUN install-from-source http://xmlsoft.org/sources/libxml2-2.9.7.tar.gz --with-zlib=/usr/local --without-python
-RUN install-from-source https://github.com/libffi/libffi/archive/v3.3-rc0.tar.gz
-RUN install-from-source https://mirrors.edge.kernel.org/pub/linux/utils/util-linux/v2.34/util-linux-2.34.tar.xz \
-    --disable-all-programs \
-    --enable-libblkid \
-    --enable-libmount \
-    --enable-libuuid
-RUN install-from-source https://gitlab.gnome.org/GNOME/glib/-/archive/2.63.0/glib-2.63.0.tar.gz \
+RUN install-from-source http://xmlsoft.org/sources/libxml2-2.9.10.tar.gz --with-zlib=/usr/local --without-python
+RUN install-from-source https://github.com/libffi/libffi/releases/download/v3.3/libffi-3.3.tar.gz
+RUN install-from-source https://gitlab.gnome.org/GNOME/glib/-/archive/2.63.3/glib-2.63.3.tar.bz2 \
     -Ddefault_library=both \
     -Dinternal_pcre=true \
     && cp /usr/local/lib/glib-2.0/include/glibconfig.h /usr/local/include/glibconfig.h
-RUN install-meson-from-source https://github.com/AravisProject/aravis/archive/ARAVIS_0_7_2.tar.gz \
+RUN install-meson-from-source https://github.com/AravisProject/aravis/archive/ARAVIS_0_7_3.tar.gz \
     -Ddefault_library=both \
     -Dviewer=false \
     -Dgst-plugin=false \
