--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
     "protobuf": "node build_scripts/generate_messages.js",
     "postinstall": "yarn protobuf",
     "dev": "yarn start:virtual",
-    "dev:debug": "nodemon --inspect ./src/server/dev.ts --virtual-robots",
-    "storybook": "node ./conf/storybook/dev.js",
-    "storybook:build": "node ./conf/storybook/build_storybook.js",
-    "storybook:prod": "node ./conf/storybook/prod.js",
-    "start": "nodemon ./src/server/dev.ts",
-    "start:debug": "nodemon --inspect ./src/server/dev.ts",
-    "start:virtual": "nodemon ./src/server/dev.ts --virtual-robots",
-    "virtual-robots": "nodemon ./src/virtual_robots/run.ts",
-    "prod": "ts-node ./src/server/prod.ts",
-    "prod:virtual": "ts-node ./src/server/prod.ts --virtual-robots",
-    "build": "yarn clean:dist && webpack -p --progress --colors",
-    "build:ci": "yarn clean:dist && webpack --ci --progress --colors",
+    "dev:debug": "ts-node --inspect src/server/dev-server.ts --virtual-robots",
+    "storybook": "node conf/storybook/dev.js",
+    "storybook:build": "node conf/storybook/build_storybook.js",
+    "storybook:prod": "node conf/storybook/prod.js",
+    "start": "ts-node src/server/dev-server.ts",
+    "start:debug": "ts-node --inspect src/server/dev-server.ts",
+    "start:virtual": "ts-node src/server/dev-server.ts --virtual-robots",
+    "virtual-robots": "nodemon src/virtual_robots/run.ts",
+    "prod": "node dist/prod.js",
+    "prod:virtual": "node dist/prod.js --virtual-robots",
+    "build": "ts-node build_scripts/build.ts --production",
+    "build:dev": "ts-node build_scripts/build.ts",
+    "build:ci": "ts-node build_scripts/build.ts --ci",
     "clean": "yarn clean:dist && yarn clean:coverage",
     "clean:dist": "rimraf dist",
     "clean:coverage": "rimraf coverage",
@@ -56,6 +57,7 @@
     "@types/jest": "^24.0.18",
     "@types/minimist": "^1.2.0",
     "@types/node": "^12.7.2",
+    "@types/nodemon": "^1.19.0",
     "@types/pixi.js": "^4.8.8",
     "@types/react": "16.9.2",
     "@types/react-color": "^3.0.1",
@@ -74,6 +76,7 @@
     "@types/throttle-debounce": "^1.1.1",
     "@types/webpack": "^4.39.0",
     "@types/webpack-dev-middleware": "^2.0.3",
+    "@types/webpack-node-externals": "^1.7.1",
     "@types/xxhashjs": "^0.2.1",
     "babel-loader": "^8.0.6",
     "caniuse-lite": "^1.0.30000989",
@@ -95,10 +98,10 @@
     "postcss-loader": "3.0.0",
     "postcss-reporter": "6.0.1",
     "postcss-url": "^8.0.0",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "raw-loader": "^3.1.0",
     "react-svg-loader": "3.0.3",
     "rimraf": "^3.0.0",
-    "seedrandom": "^3.0.3",
     "style-loader": "1.0.0",
     "ts-jest": "24.0.2",
     "ts-loader": "^6.0.4",
@@ -111,7 +114,8 @@
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-middleware": "^3.7.0",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.8.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "binary": "^0.3.0",
@@ -139,6 +143,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-transition-group": "^4.2.2",
+    "seedrandom": "^3.0.3",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
