Make a buildkite plugin that caches the node_modules/.cache directories (NUbots/NUsight2#305)

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,6 +4,7 @@ steps:
       - yarn
       - yarn build:ci
     plugins:
+      - ./.buildkite/plugins/cache: ~
       - docker#v3.5.0:
           image: "node:13"
           propagate-uid-gid: true
@@ -15,6 +16,7 @@ steps:
       - yarn
       - yarn tslint
     plugins:
+      - ./.buildkite/plugins/cache: ~
       - docker#v3.5.0:
           image: "node:13"
           propagate-uid-gid: true
@@ -26,6 +28,7 @@ steps:
       - yarn
       - yarn test:ci
     plugins:
+      - ./.buildkite/plugins/cache: ~
       - docker#v3.5.0:
           image: "node:13"
           propagate-uid-gid: true
