--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -11,6 +11,18 @@ steps:
           environment:
             - "HOME=/workdir"
 
+  - label: Build storybook
+    command:
+      - yarn
+      - yarn storybook:build
+    plugins:
+      - ./.buildkite/plugins/cache: ~
+      - docker#v3.5.0:
+          image: "node:13"
+          propagate-uid-gid: true
+          environment:
+            - "HOME=/workdir"
+
   - label: Check code with tslint
     command:
       - yarn
