--- a/module/motion/QuinticWalk/data/config/QuinticWalk.yaml
+++ b/module/motion/QuinticWalk/data/config/QuinticWalk.yaml
@@ -1,23 +1,23 @@
 walk:
   # Full walk cycle frequency
   # (in Hz, > 0)
-  freq: 1.3
+  freq: 0.8	
   # Length of double support phase in half cycle
   # (ratio, [0:1])
-  double_support_ratio: 0.1
+  double_support_ratio: 0.55
   # Give extra swing to first step for better start
   # (in ?, [0:10])
-  first_step_swing_factor: 1.1
+  first_step_swing_factor: 1.0
   foot:
     # Lateral distance between the feet center
     # (in m, >= 0)
-    distance: 0.26
+    distance: 0.28
     # Maximum flying foot height
     # (in m, >= 0)
-    rise: 0.08
+    rise: 0.1
     # Pause of Z movement on highest point
     # (single support cycle ratio, [0,1])
-    z_pause: 0.0
+    z_pause: 0.04
     put_down:
       # Let the foot's downward trajectory end above the ground
       # this is helpful if the support leg bends
@@ -25,56 +25,56 @@ walk:
       z_offset: 0.0
       # Phase time for moving the foot from Z offset to ground
       # (in half cycle ratio [0:1])
-      phase: 1.0
+      phase: 0.5 # 0.5
       # Roll offset on flying foot at put down
       # (in rad, [-1,1])
-      roll_offset: 0.0
+      roll_offset: 0
     # Phase of flying foot apex
     # (single support cycle phase, [0:1])
-    apex_phase: 0.5
+    apex_phase: 0.15
     overshoot:
       # Foot X/Y overshoot in ratio of step length
       # (ratio, >= 0)
-      ratio: 0.1
+      ratio: 0.0
       # Foot X/Y overshoot phase
       # (single support cycle phase, [footApexPhase:1]
-      phase: 0.85
+      phase: 0.0
   trunk:
     # Height of the trunk from ground
     # (in m, > 0)
-    height: 0.47
+    height: 0.45
     # Trunk pitch orientation
     # (in rad)
-    pitch: 25 * pi / 180
+    pitch: 28 * pi / 180
     # Phase offset of trunk oscillation
     # (half cycle phase, [-1:1])
-    phase: 0.1
+    phase: 0.15
     # Trunk forward offset
     # (in m)
-    x_offset: 0.045
+    x_offset: 0.03 # 0.045
     # Trunk lateral offset
     # (in m)
     y_offset: 0.0
     # Trunk lateral oscillation amplitude ratio
     # (ratio, >= 0)
-    swing: 0.2
+    swing: 0.05
     # Trunk swing pause length in phase at apex
     # (half cycle ratio, [0:1])
     pause: 0.0
     x_offset_p_coef:
       # Trunk forward offset proportional to forward step
       # (in 1)
-      forward: 0.04
+      forward: 0.09 # 0.04
       # Trunk forward offset proportional to rotation step
       # (in m/rad)
-      turn: 0.0
+      turn: 0.09
     pitch_p_coef:
       # Trunk pitch orientation proportional to forward step
       # (in rad/m)
-      forward: 10 * pi / 180
+      forward: 18 * pi / 180 # 11
       # Trunk pitch orientation proportional to rotation step
       # (in 1)
-      turn: 0 * pi / 180
+      turn: 18 * pi / 180
   kick:
     # Length of kick movement
     # (in m, [0:1])
