--- a/module/input/Camera/data/config/nugus3/Cameras/Left.yaml
+++ b/module/input/Camera/data/config/nugus3/Cameras/Left.yaml
@@ -15,16 +15,16 @@ lens:
   # Lens projection type
   projection: EQUIDISTANT
   # Normalised focal length: focal length in pixels / image width
-  focal_length: 0.322265625
+  focal_length: 0.3483501377911852
   # Normalised image centre offset: pixels from centre to optical axis / image width
-  centre: [0, 0]
+  centre: [0.025083740294995292, 0.009478481033831665]
   # The polynomial distortion coefficients for the lens
-  k: [0, 0]
+  k: [0.436992840635348, 0.13151054190615985]
   # The angular diameter that the lens covers (the area that light hits on the sensor) or auto for the entire sensor
   fov: 180 * pi / 180
   # The homogenous transform from the rigid platform this camera is attached to to its optical location
   Hpc:
-    - [1, 0, 0, 0]
-    - [0, 1, 0, 0.068]
-    - [0, 0, 1, 0]
-    - [0, 0, 0, 1]
+  - [1.0, 0.0, 0.0, 0.0]
+  - [0.0, 1.0, 0.0, 0.068]
+  - [0.0, 0.0, 1.0, 0.0]
+  - [0.0, 0.0, 0.0, 1.0]
