--- a/module/input/Camera/data/config/nugus1/Cameras/Left.yaml
+++ b/module/input/Camera/data/config/nugus1/Cameras/Left.yaml
@@ -1,4 +1,4 @@
-serial_number: 01188483
+serial_number: 01188260
 
 lens:
   # Lens: Lensagon BF10M19828S118C
@@ -15,16 +15,16 @@ lens:
   # Lens projection type
   projection: EQUIDISTANT
   # Normalised focal length: focal length in pixels / image width
-  focal_length: 0.322265625
+  focal_length: 0.34767878619271286
   # Normalised image centre offset: pixels from centre to optical axis / image width
-  centre: [0, 0]
+  centre: [-0.01370165657132854, -0.013645629277120971]
   # The polynomial distortion coefficients for the lens
-  k: [0, 0]
+  k: [0.46673390301927425, 0.15017118169604132]
   # The angular diameter that the lens covers (the area that light hits on the sensor) or auto for the entire sensor
   fov: 180 * pi / 180
   # The homogenous transform from the rigid platform this camera is attached to to its optical location
   Hpc:
-    - [1, 0, 0, 0]
-    - [0, 1, 0, 0.068]
-    - [0, 0, 1, 0]
-    - [0, 0, 0, 1]
+  - [1.0, 0.0, 0.0, 0.0]
+  - [0.0, 1.0, 0.0, 0.068]
+  - [0.0, 0.0, 1.0, 0.0]
+  - [0.0, 0.0, 0.0, 1.0]
