--- a/module/input/Camera/data/config/nugus1/Cameras/Right.yaml
+++ b/module/input/Camera/data/config/nugus1/Cameras/Right.yaml
@@ -1,4 +1,4 @@
-serial_number: 011885B0
+serial_number: 0118847F
 
 lens:
   # Lens: Lensagon BF10M19828S118C
@@ -15,16 +15,16 @@ lens:
   # Lens projection type
   projection: EQUIDISTANT
   # Normalised focal length: focal length in pixels / image width
-  focal_length: 0.322265625
+  focal_length: 0.34407470485610553
   # Normalised image centre offset: pixels from centre to optical axis / image width
-  centre: [0, 0]
+  centre: [0.0037393686683910104, -0.007110721366947057]
   # The polynomial distortion coefficients for the lens
-  k: [0, 0]
+  k: [0.4739103438574755, 0.1549602920025024]
   # The angular diameter that the lens covers (the area that light hits on the sensor) or auto for the entire sensor
   fov: 180 * pi / 180
   # The homogenous transform from the rigid platform this camera is attached to to its optical location
   Hpc:
-    - [1, 0, 0, 0]
-    - [0, 1, 0, -0.068]
-    - [0, 0, 1, 0]
-    - [0, 0, 0, 1]
+  - [0.9998312139335508, 0.018356684500299744, -0.0007588005790349261, -0.0003565025401303975]
+  - [-0.018295764505299208, 0.9985806894291701, 0.050018713501347664, 0.00035793156166487317]
+  - [0.0016759013482070722, -0.04999638820274641, 0.9987479924992847, 0.0018270306405202379]
+  - [0.0, 0.0, 0.0, 1.0]
