Added compiler definition of CL Target Version to module/vision cmake

--- a/module/vision/VisualMesh/CMakeLists.txt
+++ b/module/vision/VisualMesh/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Add the VisualMesh project to be built
 add_subdirectory(VisualMesh)
 
+# Set the CL Target Version
 add_compile_definitions(CL_TARGET_OPENCL_VERSION=120)
 
 # Build our NUClear module
