--- a/module/support/SoccerSimulator/data/config/SoccerSimulator.yaml
+++ b/module/support/SoccerSimulator/data/config/SoccerSimulator.yaml
@@ -6,7 +6,7 @@ auto_start_behaviour: true
 vision:
   # Disabling either of these emits corresponding ground truth simulation results
   # as localisation result
-  goal_observations: true
+  goal_observations: false
   ball_observations: false
 
   distinguish_own_and_opponent_goals: false
@@ -25,7 +25,7 @@ vision:
 
 robot:
   # If use_motion is true, then the robot will move based on the latest behaviour commands
-  motion_type: MOTION #NONE, PATH or MOTION
+  motion_type: STRAIGHT #NONE, PATH, MOTION OR STRAIGHT
   # If motion_type is PATH, the following path with be used
   path:
     period: 10
@@ -35,7 +35,7 @@ robot:
 
 ball:
   # If use_motion is true, then the ball will move based on the latest behaviour commands
-  motion_type: MOTION #NONE, PATH or MOTION
+  motion_type: NONE #NONE, PATH or MOTION
   path:
   # If motion_type is PATH, the following path with be used
     period: 20
@@ -53,4 +53,4 @@ initial:
 
 # Turns off vision but leaves localisation running with no observations.
 # Allows for testing of things like odometry
-blind_robot: false
+blind_robot: true
