--- a/module/behaviour/strategy/KeyboardWalk/CMakeLists.txt
+++ b/module/behaviour/strategy/KeyboardWalk/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Find Curses (we need ncurses)
 set(CURSES_NEED_NCURSES TRUE)
+set(CURSES_NEED_WIDE TRUE)
 find_package(Curses REQUIRED)
 
 # Build our NUClear module
