--- a/.buildkite/docker-compose.yml
+++ b/.buildkite/docker-compose.yml
@@ -13,6 +13,7 @@ services:
         target: /home/nubots/NUbots
         read_only: true
         consistency: cached
+
   nuc7i7bnh_image:
     image: nubots/nubots:nuc7i7bnh
   nuc7i7bnh:
@@ -20,6 +21,20 @@ services:
       context: ./../docker
       args:
         platform: nuc7i7bnh
+    volumes:
+      - type: bind
+        source: ./..
+        target: /home/nubots/NUbots
+        read_only: true
+        consistency: cached
+
+  nuc8i7beh_image:
+    image: nubots/nubots:nuc8i7beh
+  nuc8i7beh:
+    build:
+      context: ./../docker
+      args:
+        platform: nuc8i7beh
     volumes:
       - type: bind
         source: ./..
