Force -fcommon for libraries that need it

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -143,7 +143,10 @@ RUN install-from-source https://github.com/KhronosGroup/OpenCL-CLHPP/archive/mas
 
 # OpenCL loader library
 RUN install-package ruby
-RUN install-from-source https://github.com/OCL-dev/ocl-icd/archive/v2.2.12.tar.gz
+# GCC10 changed the default from -fcommon to -fno-common.
+# This causes multiple definition errors during linking for espeak
+RUN CFLAGS="-fcommon" CXXFLAGS="-fcommon" \
+    install-from-source https://github.com/OCL-dev/ocl-icd/archive/v2.2.12.tar.gz
 
 # OpenBLAS
 RUN install-package gcc-fortran
@@ -237,7 +240,10 @@ RUN install-from-source ftp://ftp.alsa-project.org/pub/lib/alsa-lib-1.2.1.2.tar.
     --without-debug
 RUN install-from-source https://github.com/espeak-ng/pcaudiolib/archive/1.1.tar.gz
 COPY --chown=nubots:nubots usr/local/package/espeak.sh /usr/local/package/espeak.sh
-RUN /usr/local/package/espeak.sh https://github.com/espeak-ng/espeak-ng/releases/download/1.50/espeak-ng-1.50.tgz
+# GCC10 changed the default from -fcommon to -fno-common.
+# This causes multiple definition errors during linking for espeak
+RUN CFLAGS="-fcommon" CXXFLAGS="-fcommon" \
+    /usr/local/package/espeak.sh https://github.com/espeak-ng/espeak-ng/releases/download/1.50/espeak-ng-1.50.tgz
 
 # Install python libraries
 RUN pip install \
