Create mirrorlist in line

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,18 +6,17 @@
 #  \___/|____/  |____/ \___|\__|\__,_| .__/  #
 #                                    |_|     #
 ##############################################
+### The following two commands are paired
+### The date in the Server command must either match, or be more recent than,
+### the date in the FROM command
+### Date format is ISO year/month/day
 FROM archlinux:20200505
-
-############################################################################
-###                                                                      ###
-### NOTE: IF YOU CHANGE THE ARCH LINUX IMAGE DATE UPDATE THE MIRRORLIST  ###
-###       TO CONTAIN THE SAME DATE                                       ###
-###                                                                      ###
-############################################################################
-COPY --chown=root:root etc/pacman.d/mirrorlist /etc/pacman.d/mirrorlist
+RUN echo "Server=https://archive.archlinux.org/repos/2020/05/05/\$repo/os/\$arch" | tee /etc/pacman.d/mirrorlist
 
 # Arch recommends running this as the first command of the docker image
 # Use "yyuu" to allow for downgrades
+# There wont be any downgrades provided the date in Server line above is the same
+# or newer than the arch image date
 RUN pacman -Syyuu --noconfirm --needed --overwrite \*
 
 # Create the nubots user, and setup sudo so no password is required
