Clarify link format comment

--- a/module/tools/SystemConfiguration/data/config/SystemConfiguration.yaml
+++ b/module/tools/SystemConfiguration/data/config/SystemConfiguration.yaml
@@ -42,7 +42,9 @@ groups:
   - u3v
 
 # Necessary symlinks
+# Link format
 # target: name
+# will create a link to target with name
 links:
   /run/systemd/resolve/stub-resolv.conf: /etc/resolv.conf
   /usr/share/zoneinfo/Australia/Sydney: /etc/localtime
