--- a/module/support/logging/DataLogging/CMakeLists.txt
+++ b/module/support/logging/DataLogging/CMakeLists.txt
@@ -8,11 +8,12 @@ set(config_file "${CMAKE_CURRENT_BINARY_DIR}/data/config/DataLogging.yaml")
 add_custom_command(
   USES_TERMINAL
   OUTPUT "${source_file}" "${config_file}"
-  COMMAND ${PYTHON_EXECUTABLE} ARGS "${CMAKE_CURRENT_SOURCE_DIR}/src/generate_datalogging.py"
+  COMMAND ${PYTHON_EXECUTABLE} ARGS
+          "${CMAKE_CURRENT_SOURCE_DIR}/src/generate_datalogging.py"
           "${PROJECT_BINARY_DIR}/shared" "${source_file}" "${config_file}"
-  DEPENDS ${NUCLEAR_MESSAGE_LIBRARIES} "${CMAKE_CURRENT_SOURCE_DIR}/src/generate_datalogging.py"
-  COMMENT "Generating DataLogging system for current messages"
-)
+  DEPENDS ${NUCLEAR_MESSAGE_LIBRARIES}
+          "${CMAKE_CURRENT_SOURCE_DIR}/src/generate_datalogging.py"
+  COMMENT "Generating DataLogging system for current messages")
 
 # Build our NUClear module
 nuclear_module(SOURCES "${source_file}" DATA_FILES "${config_file}:config")
