--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/plugin-syntax-jsx": "^7.8.3",
     "@babel/plugin-syntax-typescript": "^7.8.3",
     "@storybook/addon-actions": "^5.1.11",
+    "@storybook/addon-knobs": "^5.3.14",
     "@storybook/react": "^5.1.11",
     "@types/classnames": "^2.2.9",
     "@types/component-emitter": "^1.2.8",
@@ -123,6 +124,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@use-it/interval": "^0.1.3",
     "binary": "^0.3.0",
     "binary-search-bounds": "^2.0.4",
     "bindings": "^1.5.0",
