Upgrade dependencies (NUbots/NUsight2#325)
* Removes pixi support

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -6,7 +6,8 @@ steps:
     plugins:
       - ./.buildkite/plugins/cache: ~
       - docker#v3.5.0:
-          image: "node:13"
+          image: "node:12"
+          always-pull: true
           propagate-uid-gid: true
           environment:
             - "HOME=/workdir"
@@ -18,7 +19,8 @@ steps:
     plugins:
       - ./.buildkite/plugins/cache: ~
       - docker#v3.5.0:
-          image: "node:13"
+          image: "node:12"
+          always-pull: true
           propagate-uid-gid: true
           environment:
             - "HOME=/workdir"
@@ -30,7 +32,8 @@ steps:
     plugins:
       - ./.buildkite/plugins/cache: ~
       - docker#v3.5.0:
-          image: "node:13"
+          image: "node:12"
+          always-pull: true
           propagate-uid-gid: true
           environment:
             - "HOME=/workdir"
@@ -42,7 +45,8 @@ steps:
     plugins:
       - ./.buildkite/plugins/cache: ~
       - docker#v3.5.0:
-          image: "node:13"
+          image: "node:12"
+          always-pull: true
           propagate-uid-gid: true
           environment:
             - "HOME=/workdir"
